Se modifica que en dispositivos pequeños se pueda cambiar de idioma

--- a/css/styles.css
+++ b/css/styles.css
@@ -569,8 +569,7 @@ footer .social-media a:hover img {
   }
 
   /* OCULTAMOS EL BOTÓN INSTAGRAM Y EL WRAPPER (Sólo queda el language-switcher suelto) */
-  .btn-instagram-header,
-  .header-buttons-wrapper {
+  .btn-instagram-header{
     display: none;
   }
 
