--- a/css/styles.css
+++ b/css/styles.css
@@ -170,6 +170,7 @@ header {
   font-family: 'Tan Songbird', serif;
   font-size: clamp(1.8rem, 6vw, 3.2rem);
   text-transform: uppercase;
+  line-height: 2;
 }
 
 
